Add error while entering wrong URL